# cui

./: Cargo.toml  DESIGN.md  LICENSE  README.md  build.rs
crates/cui-derive/: Cargo.toml
crates/cui-derive/src/: lib.rs
crates/cui-tokenizer/: Cargo.toml
crates/cui-tokenizer/src/: lib.rs
crates/state-macro/: Cargo.toml
crates/state-macro/src/: codegen.rs  lib.rs
crates/state-macro/src/codegen/: facade.rs  graph.rs  machine.rs  transitions.rs  util.rs
cui/: _cui_help.cui  _cui_introduction.cui
examples/: agent_loop.rs  conditional_rendering.rs  cui_file_conditional.rs  data_input.rs  derive_component.rs  full_workflow.rs  tool_skill_guide.rs  user_override.rs
examples/cui/: act_bash.cui  act_files.cui  code_review.cui  header.cui  plan.cui  review.cui  status.cui
examples/cui/tools/: code_review.cui  read_file.cui  run_test.cui
src/: adapter.rs  compile.rs  component.rs  content.rs  context.rs  lib.rs  render.rs  runtime.rs  syntax.rs  types.rs
src/adapter/: skill.rs  tool.rs
src/compile/: compiler.rs  file.rs  template.rs
src/compile/file/: component.rs  directory.rs  frontmatter.rs  user.rs
src/component/: base.rs  builder.rs  builtin.rs  iter.rs  node.rs  snapshot.rs  tests.rs  tree.rs
src/component/builtin/: blocks.rs  group.rs  leaf.rs  primitives.rs  toast.rs
src/content/: bundled.rs  instructions.rs  prompt.rs
src/context/: actions.rs  render.rs  store.rs  tests.rs
src/render/: schedule.rs
src/runtime/: capacity.rs  context.rs  cycle.rs  dialogue.rs  event.rs  handler.rs  ordering.rs  registry.rs  schedule.rs  test_utils.rs
src/runtime/context/: tests.rs
src/runtime/registry/: builtin.rs  registry.rs
src/types/: action.rs  condition.rs  data.rs  keyword.rs  level.rs  manage.rs  output.rs  tokenizer.rs
src/types/keyword/: def.rs  error.rs  types.rs
tests/: derive_test.rs  e2e_test.rs
