[package]

name        = "state-macro"
version     = "0.4.0"
edition = "2024"
authors     = ["vesita"]
description = "状态机代码生成工具 (forked from rust-bakery/machine)"
license     = "MIT"
repository  = "https://github.com/vesita/cui"
readme      = "./README.md"
keywords    = ["state", "state-machine"]

include = [
  "Cargo.toml",
  "src/**/*.rs",
  "tests/**/*.rs",
  "examples/**/*.rs",
]

[features]
dot = []

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
case = "1"
tracing = "0.1"

[lints]
workspace = true

[lib]
proc-macro = true
